--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -28,7 +28,7 @@
     - name: "14:00 - 15:30 Collecting Digital Trace Data (*Zoom*)"
     - name: "15:30 - 16:30 Discussing Strengths & Benefits plus Hybrid Designs based the pre-recorded lectures [Day 2](https://sicss.io/curriculum) (*Zoom*)"
     - name: "16:30 - 17:45 Break"    
-    - name: "17:45 - 19:15 Guest speaker: Rene Kizilcec. Topic TBA (*Zoom*)" 
+    - name: "17:45 - 19:15 Guest speaker: Rene Kizilcec. Randomized Field Experiments in Online Learning (*Zoom*)" 
     - name: "19:15 - 19:20 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-16
