--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -96,7 +96,7 @@
        
 - date: "First Week of ‘Real SICSS’"
   events:
-     - name: "**Workshops and Group Discussions**<br/>This week will be full of lectures and small group discussions. We will use the flipped classroom model to follow some of the SICSS curriculum. Additionally, we will organize method workshops with hands-on experience. You will also have speed dating sessions to establish your group for the second week program and you are expected to report your group members and a short description of your group project at the end of the week."
+     - name: "**Research Talks and Group Discussions**<br/>This week will be full of research talks and small group discussions. We already covered some of the SICSS curriculum during Pre-SICSS period. By completing Pre-SICSS tasks, you had a hands-on-experience on how to collect data from the web and how to process your data. We will have small group discussions on Ethics first. Then, we will host eminent scholars of computational social science to see not only state-of-the-art methods in the field but also applications of those methods in multiple disciplines. Some of the talks have premilinary readings. Having look at those readings will be benefit of you to follow the talk. You will also have research dating sessions to establish your group for the second week program and you are expected to report your group members and a short description of your group project at the end of the week."
 
 - date: 2021-06-14
   name: Introduction and Ethics
@@ -118,79 +118,97 @@
      - name: "SICSS Learning Material: [Day 1-Introduction and Ethics](https://sicss.io/curriculum)"
        
 - date: 2021-06-15
-  name: Research Talk
+  name: Research Talk and Research Dating
   events:
-     - name: "**Title**: Automated Methods of Protest Event Collection"
-     - name: "**Presenters**: [Erdem Yoruk, Ali Hürriyetoğlu, Fırat Duruşan, Çağrı Yoltar](https://emw.ku.edu.tr/people/)"
+     - name: "16:00-17:00 Research Dating on Wonder"
+     - name: "17:00-20:00 Research Talk"
+     - name: "**Automated Methods of Protest Event Collection**"
+     - name: "**[Erdem Yoruk, Ali Hürriyetoğlu, Fırat Duruşan, Çağrı Yoltar](https://emw.ku.edu.tr/people/)**"
      - name: "**Description**: Protest event analysis is the most common approach for social movement scholars as it is an unobtrusive and context-sensitive technique that can convert unstructured matter into large volumes of data, in a cross-national, cross-time and cross-issue comparative character. The use of digitized new sources and automated approaches to collect protest events information has accelerated in the 2000s. The selection bias problem, substantial labor costs, and generalizability problems associated with manual coding have constituted the demand conditions for automated methods. What makes automation possible was the big data revolution, which generated vast amounts of news sources digitally available to researchers. Besides, the unprecedented computational power that was built by new generations of processors finally enabled the application of artificial intelligence techniques that had been developed long ago. Henceforth, several very large projects were formed to apply fully or semi-automated methods to collect contentious political event data from news sources, such as GDELT, ICEWS, EMBERS and SPEED, POLCON, and MMAD. In this presentation, we will describe the potentials and challenges of using artificial intelligence to understand social movements and then I will present the new bottom-up methodological approach that has adopted by our European Research Council (ERC) funded project to overcome these challenges."
      - name: "**[Readings](https://drive.google.com/drive/folders/1odn_5mzw2oC4Ftw4n3Chqypp0LI5wBId?usp=sharing)**"
-    
+
+     
 - date: 2021-06-16
-  name: Research Talk
+  name: Research Talk and Research Dating
   events: 
-     - name: "**Title**: Microgeography of Ethnic Enclaves"
-     - name: "**Presenter**: [Özge Öner](https://www.landecon.cam.ac.uk/directory/ozge-oner-dr)"
-       
+     - name: "16:00-17:00 Research Dating on Wonder"
+     - name: "17:00-20:00 Research Talk"
+     - name: "**Microgeography of Ethnic Enclaves**"
+     - name: "**[Özge Öner](https://www.landecon.cam.ac.uk/directory/ozge-oner-dr)**"
+
+     
 - date: 2021-06-17
-  name: Research Talk
+  name: Research Talk and Research Dating
   events:
-      - name: "**Title**: Characterizing the Nature of Online Political Conversations at Scale"
-      - name: "**Presenter**: [Ceren Budak](http://cbudak.com/index.html)"
+      - name: "16:00-17:00 Research Dating on Wonder"
+      - name: "17:00-20:00 Research Talk"
+      - name: "**Characterizing the Nature of Online Political Conversations at Scale**"
+      - name: "**[Ceren Budak](http://cbudak.com/index.html)**"
       - name: "**Description**: In this talk, I will summarize two studies on citizen participation in political discussions online. In one, I will focus on the substance of such discussions and show how Twitter users frame immigration discourse. I will report on the issue-generic, issue-specific, and narrative frames we identified using supervised learning techniques and show how users' ideology and region impact framing, and how a message's framing influences its audience responses. In the second part of the talk, I will focus on the style of political conversations. Focusing on Reddit this time, I will show how norms of toxicity in political discussions are sustained and reproduced, shaping how citizens engage online."
-        
+
+      
 - date: 2021-06-18
-  name: Research Talk
+  name: Research Talk and Research Dating
   events:
-      - name: "**Title**: Big Data for Studying Human Migration "
-      - name: "**Presenter**: [Tuba Bircan](https://www.tubabircan.com/)"
+      - name: "16:00-17:00 Research Dating on Wonder"
+      - name: "17:00-20:00 Research Talk"
+      - name: "**Big Data for Studying Human Migration**"
+      - name: "**[Tuba Bircan](https://www.tubabircan.com/)**"
       - name: "**Description**: Traditional statistical data on international migration suffers from the problems (gaps) of inconsistency in definitions, differences in geographical coverage, absence of reasons for migration, timeliness and limitations in demographic characteristics. The global-level migration indicators are relatively under-developed; hence, countries are expected to improve capacity to generate timely, reliable, and comparable data on migration to help guide policy makers in devising evidence-based policies and plans of action to tackle migration aspects of the Social Development Goals. Although there is a novel list of potential data sources that could provide valuable, real-time insights, these remain largely understudied for the time being. To be more specific , the data collected or originated by international institutes and the dissemination of this data faces sensitivity obstacles linked to legal terms, purpose of the data, etc. Likewise, some administrative data collected by national and international organisations (e.g. data on recently arrived migrants, percentage of immigrants who have taken part in integration initiatives, longitudinal studies of integration measures) exists but is not available to many researchers and policy-makers. Finally, new sources of data and Big Data (e.g. mobile phone records, social media data, satellite data, etc.) exist and it could be used to fill some of the gaps of the traditional data. There are commercial and/or privacy issues to solve for having access to that data and substantial research and analysis are required before it can meet policy requirements. Overall improving migration data is a crucial step to improving migration governance since better data is needed in order to bring about sustainable social and economic development and national migrant data strategies are needed to inform good policies. This talk will discuss the existing gaps and shortcomings of the international migration statistics and the potential utilisation of Big Data analytics for bridging these gaps. More specifically, mobile phone data, social media data and earth observation data potentials will be explored with specific examples for developing migration indicators for stock and flows as well as some socio-economic integration. Big Data use for humanitarian aid (related to migration and refugees) and the ethical concerns will also be discussed elaborately."
       - name: "**[Readings](https://drive.google.com/file/d/1GABVSOjlSqu1l8HgajbzkArmoUTDsfCW/view?usp=sharing)**"
-  
+
+      
 - date: 2021-06-19
   name: Off Day
   events:
      - name: 
      
 - date: 2021-06-20
-  name: Last day for declaring group members and project proposals
+  name: Last day for declaring group members and short project proposals
   events:
 
 - date: "Second Week of ‘Real SICSS’"
   events:
-     - name: "**Group Projects and Alumni Sessions**<br/> This week will be focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond!"
+     - name: "**Guest Talks**<br/>  We believe that social science research and industry will collaborate more in the future. Computational social science methods allows academic researchers to work closely with industry compared to the past. Therefore, we will organize an industry talk with an eminent figure in Turkish innovation industry to see other side of the coin. Additionally, we will have an eminent figure of Turkish Natural Language Processing to learn the state-of-the-art NLP applications in social sciences."
+     - name: "**Work on Group Projects**<br/> This week will be mainly focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond! 
 
 - date: 2021-06-21
-  name: Industry Talk
+  name: Industry Talk and Work on Group Projects
   events:
-     - name: "**Title**: Artificial Intelligence and Data Analytics Ecosystem in the MENA Region "
-     - name: "**Presenter**: [Doğuş Kuran](https://sicss.io/2021/istanbul/people)"
-       
+     - name: "17:00-20:00"  
+     - name: "**Artificial Intelligence and Data Analytics Ecosystem in the MENA Region**"
+     - name: "**[Doğuş Kuran](https://sicss.io/2021/istanbul/people)**"
+
+    
 - date: 2021-06-22
-  name: Method Talk 
+  name: Method Talk and Work on Group Projects
   events:
-     - name: "**Title**: Natural Language Processing and Applications to Computational Social Science"
-     - name: "**Presenter**: [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)"
-     - name: "**Description**: This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
      - name: "17:00-20:00"
+     - name: "**Natural Language Processing and Applications to Computational Social Science**"
+     - name: "**[Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)**"
+     - name: "**Description**: This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
+
        
 - date: 2021-06-23
-  name: Code Walkthrough
+  name: Code Walkthrough and Work on Group Projects
   events:
-     - name: "**Title**: Computational Text Analysis using R"
-     - name: "**Presenter**: [Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)"
      - name: "20:00-22:00"
+     - name: "**Computational Text Analysis using R**: "
+     - name: "**[Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**: "
+
       
 - date: 2021-06-24
-  name: Book Talk
+  name: Book Talk and Work on Group Projects
   events:
-     - name: "**Title**: Social Media as Spatial Conflict Event Data"
-     - name: "**Presenter**: [Akin Unver and Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)"
      - name: "20:00-22:00"
+     - name: "**Social Media as Spatial Conflict Event Data**"
+     - name: "**[Akin Unver and Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**"
+
      
 - date: 2021-06-25
-  name: Research presentations from each group and the final day of SICSS
+  name: Group Projects Presentations and Farewell
   events:
-    - name: "Presentations"
+    - name: "Group Projects Presentations"
     - name: "17:00-20:00"
     
     
