--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -208,8 +208,7 @@
 - date: 2021-06-25
   name: Group Projects Presentations and Farewell
   events:
-    - name: "Group Projects Presentations"
-    - name: "17:00-20:00"
+    - name: "17:00-20:00 Group Projects Presentations"
     
     
  
