--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -54,7 +54,8 @@
     - name: "11:00 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: Github (1)"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier"
+    - name: "3:30 - 5:00 Conférencier : [Ashton Anderson](http://www.cs.toronto.edu/~ashton/)"
+"
 - date: 2021-06-15
   name: Analyse quantitative de texte
   events:
@@ -63,7 +64,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: "
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier"
+    - name: "3:30 - 5:00 Conférencier : [Anatoliy Gruzd](https://www.ryerson.ca/information-technology-management/faculty-research/anatoliy-gruzd/) : ***Computational Approaches to Studying Anti-Social Behavior in Social Media**"
 - date: 2021-06-16
   name: "Enquêtes à l'ère numérique"
   events:
@@ -72,7 +73,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier"
+    - name: "3:30 - 5:00 Conférencier : [Éric Lacourse](https://recherche.umontreal.ca/nos-chercheurs/repertoire-des-professeurs/chercheur/is/in14715/)"
 - date: 2021-06-17
   name: Apprentissage automatique (machine learning)
   events:
@@ -81,7 +82,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier"
+    - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan)"
 - date: 2021-06-18
   name: Éthique
   events:
@@ -90,7 +91,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier"
+    - name: "3:30 - 5:00 Conférencier : [Golnoosh Farnadi](https://gfarnadi.github.io/) : ***Fairness in Machine Learning**"
 - date: 2021-06-19
   name: Congé
 - date: 2021-06-20
