--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -14,32 +14,22 @@
 - date: 2021-05-31
   name: "Code Walkthrough: Collecting Digital Trace Data - 1" 
   events: 
-      - name: "Networking"
-        time: "19:30-20:00"
-      - name: "Getting data via APIs (Twitter)"
-        time: "20:00-21:00"
-      - name: "Short Break"
-        time: "21:00-21:10"  
-      - name: "Getting data with Screen Scraping(Facebook,Instagram, Eksisozluk)"
-        time: "21:10-22:00"
-      - name: "Networking"
-        time: "22:00-22:30"       
+      - name: "19:30-20:00 Networking"
+      - name: "20:00-21:00 Getting data via APIs (Twitter)"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Getting data with Screen Scraping(Facebook,Instagram, Eksisozluk)"
+      - name: "22:00-22:30 Networking"
       - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Codes%20for%20Code-Through%20Session%201-2_2021.Rmd)"
       - name: "SICSS Learning Material: [Day 2-Collecting Digital Trace Data](https://sicss.io/curriculum)"
 
 - date: 2021-06-02
   name: "Code Walkthrough: Collecting Digital Trace Data - 2"
   events: 
-      - name: "Networking"
-        time: "19:30-20:00"
-      - name: "Getting data from YouTube and Reddit"
-        time: "20:00-21:00"
-      - name: "Short Break"
-        time: "21:00-21:10"  
-      - name: "Q&A on Collecting Digital Trace Data"
-        time: "21:10-22:00"
-      - name: "Networking"
-        time: "22:00-22:30"       
+      - name: "19:30-20:00 Networking"
+      - name: "20:00-21:00 Getting data from YouTube and Reddit"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Q&A on Collecting Digital Trace Data"
+      - name: "22:00-22:30 Networking"
       - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Reddit%20and%20Youtube.Rmd)"
       - name: "SICSS Learning Material: [Day 2-Collecting Digital Trace Data](https://sicss.io/curriculum)"
 
@@ -47,16 +37,11 @@
 - date: 2021-06-08
   name: "Code Walkthrough: Data Wrangling"
   events: 
-      - name: "Networking"
-        time: "19:30-20:00"
-      - name: "Data wrangling with data.table package"
-        time: "20:00-21:00"
-      - name: "Short Break"
-        time: "21:00-21:10"  
-      - name: "Data wrangling with dplyr&lubridate packages"
-        time: "21:10-22:00"
-      - name: "Networking"
-        time: "22:00-22:30"       
+      - name: "19:30-20:00 Networking"
+      - name: "20:00-21:00 Data wrangling with data.table package"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Data wrangling with dplyr&lubridate packages"
+      - name: "22:00-22:30 Networking"
       - name: "[Replication Codes]()"
       - name: "SICSS Learning Material: [Data “Wrangling”](https://sicss.io/boot_camp/)"
 
@@ -64,32 +49,22 @@
 - date: 2021-06-09
   name: "Code Walkthrough: Automated Text Analysis"
   events: 
-      - name: "Networking"
-        time: "19:30-20:00"
-      - name: "Text Analysis with quanteda package-1"
-        time: "20:00-21:00"
-      - name: "Short Break"
-        time: "21:00-21:10"  
-      - name: "Text Analysis with quanteda package-2"
-        time: "21:10-22:00"
-      - name: "Networking"
-        time: "22:00-22:30"       
+      - name: "19:30-20:00 Networking"
+      - name: "20:00-21:00 Text Analysis with quanteda package-1"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Text Analysis with quanteda package-2"
+      - name: "22:00-22:30 Networking"
       - name: "[Replication Codes]()"
       - name: "SICSS Learning Material: [Day 3-Automated Text Analysis](https://sicss.io/boot_camp/)"
         
 - date: 2021-06-11
   name: "Code Walkthrough: Data Visualization and Reporting"
   events: 
-      - name: "Networking"
-        time: "19:30-20:00"
-      - name: "Data Visualization with ggplot2 package"
-        time: "20:00-21:00"
-      - name: "Short Break"
-        time: "21:00-21:10"  
-      - name: "Reporting with markdowns and shiny"
-        time: "21:10-22:00"
-      - name: "Networking"
-        time: "22:00-22:30"       
+      - name: "19:30-20:00 Networking"
+      - name: "20:00-21:00 Data Visualization with ggplot2 package"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Reporting with markdowns and shiny"
+      - name: "22:00-22:30 Networking"
       - name: "[Replication Codes]()"
       - name: "SICSS Learning Material: [Visualization-Communicating and Collaborating](https://sicss.io/boot_camp/)"     
         
@@ -101,28 +76,20 @@
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
-     - name: "Welcome again and Evaluation of Pre-SICSS period"
-       time: "17:00-17:30"
-     - name: "Small group discussions: [What is Computational Social Science?](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md)"
-       time: "17:30-18:00"
-     - name: "Full group discussion: [What is Computational Social Science?](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md)"
-       time: "18:00-18:15"
-     - name: "Coffee Break on Wonder"
-       time: "18:15-18:45"
-     - name: "Introduction to [the Ethics group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md)"
-       time: "18:45-19:00"
-     - name: "Small group discussions on Ethics: [Case Study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
-       time: "19:00-19:30"
-     - name: "Full group discussion on Ethics"
-       time: "19:30-20:00"
+     - name: "17:00-17:30 Welcome again and Evaluation of Pre-SICSS period"
+     - name: "17:30-18:00 Small group discussions: [What is Computational Social Science?](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md)"
+     - name: "18:00-18:15 Full group discussion: [What is Computational Social Science?](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md)"
+     - name: "18:15-18:45 Coffee Break on Wonder"
+     - name: "18:45-19:00 Introduction to [the Ethics group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md)"
+     - name: "19:00-19:30 Small group discussions on Ethics: [Case Study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
+     - name: "19:30-20:00 Full group discussion on Ethics"
      - name: "SICSS Learning Material: [Day 1-Introduction and Ethics](https://sicss.io/curriculum)"
        
 - date: 2021-06-15
   name: Research Talk and Research Dating
   events:
      - name: "16:00-17:00 Research Dating on Wonder"
-     - name: "17:00-20:00 Research Talk"
-     - name: "**Automated Methods of Protest Event Collection**"
+     - name: "17:00-20:00 **Automated Methods of Protest Event Collection**"
      - name: "**[Erdem Yoruk, Ali Hürriyetoğlu, Fırat Duruşan, Çağrı Yoltar](https://emw.ku.edu.tr/people/)**"
      - name: "**Description**: Protest event analysis is the most common approach for social movement scholars as it is an unobtrusive and context-sensitive technique that can convert unstructured matter into large volumes of data, in a cross-national, cross-time and cross-issue comparative character. The use of digitized new sources and automated approaches to collect protest events information has accelerated in the 2000s. The selection bias problem, substantial labor costs, and generalizability problems associated with manual coding have constituted the demand conditions for automated methods. What makes automation possible was the big data revolution, which generated vast amounts of news sources digitally available to researchers. Besides, the unprecedented computational power that was built by new generations of processors finally enabled the application of artificial intelligence techniques that had been developed long ago. Henceforth, several very large projects were formed to apply fully or semi-automated methods to collect contentious political event data from news sources, such as GDELT, ICEWS, EMBERS and SPEED, POLCON, and MMAD. In this presentation, we will describe the potentials and challenges of using artificial intelligence to understand social movements and then I will present the new bottom-up methodological approach that has adopted by our European Research Council (ERC) funded project to overcome these challenges."
      - name: "**[Readings](https://drive.google.com/drive/folders/1odn_5mzw2oC4Ftw4n3Chqypp0LI5wBId?usp=sharing)**"
@@ -132,8 +99,7 @@
   name: Research Talk and Research Dating
   events: 
      - name: "16:00-17:00 Research Dating on Wonder"
-     - name: "17:00-20:00 Research Talk"
-     - name: "**Microgeography of Ethnic Enclaves**"
+     - name: "17:00-20:00 **Microgeography of Ethnic Enclaves**"
      - name: "**[Özge Öner](https://www.landecon.cam.ac.uk/directory/ozge-oner-dr)**"
 
      
@@ -141,8 +107,7 @@
   name: Research Talk and Research Dating
   events:
       - name: "16:00-17:00 Research Dating on Wonder"
-      - name: "17:00-20:00 Research Talk"
-      - name: "**Characterizing the Nature of Online Political Conversations at Scale**"
+      - name: "17:00-20:00 **Characterizing the Nature of Online Political Conversations at Scale**"
       - name: "**[Ceren Budak](http://cbudak.com/index.html)**"
       - name: "**Description**: In this talk, I will summarize two studies on citizen participation in political discussions online. In one, I will focus on the substance of such discussions and show how Twitter users frame immigration discourse. I will report on the issue-generic, issue-specific, and narrative frames we identified using supervised learning techniques and show how users' ideology and region impact framing, and how a message's framing influences its audience responses. In the second part of the talk, I will focus on the style of political conversations. Focusing on Reddit this time, I will show how norms of toxicity in political discussions are sustained and reproduced, shaping how citizens engage online."
 
@@ -151,8 +116,7 @@
   name: Research Talk and Research Dating
   events:
       - name: "16:00-17:00 Research Dating on Wonder"
-      - name: "17:00-20:00 Research Talk"
-      - name: "**Big Data for Studying Human Migration**"
+      - name: "17:00-20:00 **Big Data for Studying Human Migration**"
       - name: "**[Tuba Bircan](https://www.tubabircan.com/)**"
       - name: "**Description**: Traditional statistical data on international migration suffers from the problems (gaps) of inconsistency in definitions, differences in geographical coverage, absence of reasons for migration, timeliness and limitations in demographic characteristics. The global-level migration indicators are relatively under-developed; hence, countries are expected to improve capacity to generate timely, reliable, and comparable data on migration to help guide policy makers in devising evidence-based policies and plans of action to tackle migration aspects of the Social Development Goals. Although there is a novel list of potential data sources that could provide valuable, real-time insights, these remain largely understudied for the time being. To be more specific , the data collected or originated by international institutes and the dissemination of this data faces sensitivity obstacles linked to legal terms, purpose of the data, etc. Likewise, some administrative data collected by national and international organisations (e.g. data on recently arrived migrants, percentage of immigrants who have taken part in integration initiatives, longitudinal studies of integration measures) exists but is not available to many researchers and policy-makers. Finally, new sources of data and Big Data (e.g. mobile phone records, social media data, satellite data, etc.) exist and it could be used to fill some of the gaps of the traditional data. There are commercial and/or privacy issues to solve for having access to that data and substantial research and analysis are required before it can meet policy requirements. Overall improving migration data is a crucial step to improving migration governance since better data is needed in order to bring about sustainable social and economic development and national migrant data strategies are needed to inform good policies. This talk will discuss the existing gaps and shortcomings of the international migration statistics and the potential utilisation of Big Data analytics for bridging these gaps. More specifically, mobile phone data, social media data and earth observation data potentials will be explored with specific examples for developing migration indicators for stock and flows as well as some socio-economic integration. Big Data use for humanitarian aid (related to migration and refugees) and the ethical concerns will also be discussed elaborately."
       - name: "**[Readings](https://drive.google.com/file/d/1GABVSOjlSqu1l8HgajbzkArmoUTDsfCW/view?usp=sharing)**"
@@ -175,16 +139,14 @@
 - date: 2021-06-21
   name: Industry Talk and Work on Group Projects
   events:
-     - name: "17:00-20:00"  
-     - name: "**Artificial Intelligence and Data Analytics Ecosystem in the MENA Region**"
+     - name: "17:00-20:00 **Artificial Intelligence and Data Analytics Ecosystem in the MENA Region**"  
      - name: "**[Doğuş Kuran](https://sicss.io/2021/istanbul/people)**"
 
     
 - date: 2021-06-22
   name: Method Talk and Work on Group Projects
   events:
-     - name: "17:00-20:00"
-     - name: "**Natural Language Processing and Applications to Computational Social Science**"
+     - name: "17:00-20:00 **Natural Language Processing and Applications to Computational Social Science**"
      - name: "**[Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)**"
      - name: "**Description**: This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
 
@@ -192,16 +154,14 @@
 - date: 2021-06-23
   name: Code Walkthrough and Work on Group Projects
   events:
-     - name: "20:00-22:00"
-     - name: "**Computational Text Analysis using R**: "
-     - name: "**[Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**: "
+     - name: "20:00-22:00 **Computational Text Analysis using R**"
+     - name: "**[Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**"
 
       
 - date: 2021-06-24
   name: Book Talk and Work on Group Projects
   events:
-     - name: "20:00-22:00"
-     - name: "**Social Media as Spatial Conflict Event Data**"
+     - name: "20:00-22:00 **Social Media as Spatial Conflict Event Data**"
      - name: "**[Akin Unver and Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**"
 
      
