--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -82,7 +82,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan)"
+    - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan) : **Culture, knowledge, and data**"
 - date: 2021-06-18
   name: Éthique
   events:
