--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -18,7 +18,7 @@
       - name: "21:00-21:10 Short Break"
       - name: "21:10-22:00 Getting data with Screen Scraping(Facebook,Instagram, Eksisozluk)"
       - name: "22:00-22:30 Networking on Wonder"
-      - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Codes%20for%20Code-Through%20Session%201-2_2021.Rmd)"
+      - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Replication%20Codes_Task%201-2.Rmd)"
       - name: "SICSS Learning Material: [Day 2-Collecting Digital Trace Data](https://sicss.io/curriculum)"
 
 - date: 2021-06-02
@@ -29,7 +29,7 @@
       - name: "21:00-21:10 Short Break"
       - name: "21:10-22:00 Q&A on Collecting Digital Trace Data"
       - name: "22:00-22:30 Networking on Wonder"
-      - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Reddit%20and%20Youtube.Rmd)"
+      - name: "[Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Replication%20Codes_Reddit-Youtube.Rmd)"
       - name: "SICSS Learning Material: [Day 2-Collecting Digital Trace Data](https://sicss.io/curriculum)"
 
       
