--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -108,7 +108,7 @@
 - date: 2021-06-24
   name: Roundtable and Work on group projects (optional)
   events:
-    - name: "10:00 - 12:00 - Roundtable:  Computational Social Science and the Industry - With Daniel Mariani (Folha de Sao Paulo), Vera Cabral (Education Director, Microsoft Brasil), and Marcelo Soares (Lagom Data)
+    - name: "10:00 - 12:00 - Roundtable:  Computational Social Science and the Industry - With Daniel Mariani (Folha de Sao Paulo), Vera Cabral (Education Director, Microsoft Brasil), and Marcelo Soares (Lagom Data)"
  
     
 - date: 2021-06-25
