--- a/_data/2021/hong_kong/participants.yml
+++ b/_data/2021/hong_kong/participants.yml
@@ -1,5 +1,5 @@
 - name: Ziwei Wang
-  image: /assets/images/WangZiwei.jpeg
+  image: /assets/images/ZiweiWang.jpg
   bio: "Ziwei Wang is a fresh graduate student in mathematics and economics from Hong Kong University. Her research focuses on belief formation, social learning and computational social science."
   website: 
 
@@ -24,7 +24,7 @@
   
 - name: Nick Or
   image: /assets/images/NickOr.jpg
-  bio: "Nick Or is an Assistant Professor in the Department of Public Policy, City University of Hong Kong. Prior to that, Nick was a Research Fellow at the University of Southampton and a Postdoctoral Research Associate at the University of Exeter. Nick’s research interests lie in the field of public policy, comparative politics and authoritarian regimes by drawing insights from behavioural and complexity sciences, using quantitative techniques and experimental methods. His latest research and scholarly activities can be found [here](https://scholars.cityu.edu.hk/en/persons/nick-h-k-or(fb1db10b-f70a-4410-9361-08a2938d7429).html)."
+  bio: "Nick Or is an Assistant Professor in the Department of Public Policy, City University of Hong Kong. Prior to that, Nick was a Research Fellow at the University of Southampton and a Postdoctoral Research Associate at the University of Exeter. Nick’s research interests lie in the field of public policy, comparative politics and authoritarian regimes by drawing insights from behavioural and complexity sciences, using quantitative techniques and experimental methods. His latest research and scholarly activities can be found from the link of his name.."
   website: https://scholars.cityu.edu.hk/en/persons/nick-h-k-or(fb1db10b-f70a-4410-9361-08a2938d7429).html
   
 
@@ -35,7 +35,7 @@
   
   
 - name: Chuyao Wang
-  image: /assets/images/
+  image: /assets/images/ChuyaoWang.png
   bio: "Chuyao (Julian) WANG (email: chuyao.wang@connect.ust.hk) is an MPhil student in Social Science at The Hong Kong University of Science and Technology (HKUST), where he also received an MSc in Global China Studies with Dean's Award. His interests include computational political communication, social network politics and machine learning. While focusing on methodological training in the MPhil program, he is currently exploring visual sentiment in media depiction and network dynamics of political communities in Bilibili. "
   website: https://www.linkedin.com/in/wang-chuyao/?locale=en_US
   
@@ -73,4 +73,34 @@
 - name: Ehsan ul Haq
   image: /assets/images/EhsanUlHaq.png
   bio: "Ehsan ul Haq is a doctoral student in Computer Science at the Hong Kong University of Science and Technology. His research focuses on online communities' analysis, political polarization in online social networks and its implications on offline events. He is also studying rumors and misinformation propagation, and social media communications from organizational perspective."
+  website:
+
+
+- name: Olga Boichak
+  image: /assets/images/OlgaBoichak.jpg
+  bio: "Olga Boichak is Lecturer in Digital Cultures at the University of Sydney, Australia. She holds a Master of Public Administration and a PhD from Syracuse University’s interdisciplinary program in social science (USA), and her research interests span networks, narratives, and cultures of activism in the digital age. She is Editor of the Digital War journal and has a track record of publications on digital war, legitimising state power, transnational mobilisation, and algorithmic surveillance, and her work has appeared, among others, in Big Data & Society, International Journal of Communication, Media, War & Conflict, Oxford Handbook of Sociology and Digital Media, and the Journal of Intelligence and National Security."
+  website:
+   
+
+- name: Yuemin Li
+  image: /assets/images/YueminLi.jpg
+  bio: "Yuemin Li is a PhD candidate in the sociology department at University at Albany, SUNY. She studies the rise of the phenomenon of financialization and how institutional interactions have shaped its development under different political economy. She earned B.A. from HKU and M.A. from Dartmouth College."
+  website:
+  
+
+- name: Li Liao
+  image: /assets/images/LiLiao.jpg
+  bio: "Li Liao is a PhD student at the University of Hong Kong. He studies authoritarianism. He’s interested in data visualization and social network. He is now working on a visualization project about Political Selection in China."
+  website:
+
+
+- name: Alvin Junus
+  image: /assets/images/AlvinJunus.jpg
+  bio: "Alvin Junus is currently a PhD student in Social Work and Social Administration at the University of Hong Kong. He obtained his BEng and MPhil in electronic engineering from the Hong Kong University of Science and Technology and had spent 3 years in the tech industry before finally deciding to pursue a career in academia. He is broadly interested in the interplay between social network dynamics & mental health, with youths as the primary subject focus, and seeks to integrate computational methods with elements of psychosocial epidemiology & network science in his research. He is particularly drawn towards Internet-enabled social contagions among youths, such as social mechanisms, individual factors, and network structures that drive or inhibit the spread of non-cooperative behavior on team-based Internet gaming platforms that are highly popular today."
+  website:
+  
+
+- name: Yue Lin
+  image: /assets/images/YueLin.jpeg
+  bio: "Yue Lin is an incoming Ph.D. student in Political Science at the University of California, Berkeley. Yue’s research lies broadly in international political economy, with foci on foreign investment in emerging markets, and the mechanisms through which rising powers (re)shape the global political and economic order. Yue is open to trendy mixed methods for social science research."
   website:
