--- a/_data/2021/hong_kong/schedule.yml
+++ b/_data/2021/hong_kong/schedule.yml
@@ -3,32 +3,30 @@
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
-    - name: "9:00 - 11:00 Meet-and-greet"
-    - name: "11:15 - 12:15 Participant flash talks (encouraged)"
-    - name: "20:00 - 21:00 Small group discussion on ethics[case study](link coming soon)"
+    - name: "9:00 - 9:45 Meet-and-greet"
+    - name: "10:00 - 11:45 Small group discussion on ethics[case study](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md)"
+    - name: "19:30 - 20:30 Participant flash talks (encouraged)"
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
   events:
-    - name: "9:00 - 9:45 Participant flash talks (encouraged)"
+    - name: "9:00 - 9:45 [Small group discussion on Digital Trace Data; Strengths & Benefits plus Hybrid Designs](https://sicss.io/2020/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) "
     - name: "10:00 - 11:00 Talk by King-wa Fu"
-    - name: "20:00 - 21:00 Small group discussion on Digital Trace Data; Strengths & Benefits plus Hybrid Designs "
+    - name: "11:15 - 11:45 [Small group discussion on Digital Trace Data; Strengths & Benefits plus Hybrid Designs](https://sicss.io/2020/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) "
+    - name: "19:30 - 20:30 Participant flash talks (encouraged)"
 
 - date: 2021-06-16
   name: Automated Text Analysis
   events:
-    - name: "9:00 - 10:00 Participant flash talks (encouraged)"
-    - name: "10:15 - 11:15 Logistics and introduction to group exercise "
-    - name: "11:15 - 12:15 Group Exercise "
-    - name: "20:00 - 21:00 Small group discussion on promise and pitfall in text analysis"
+    - name: "9:00 - 11:30 [Group activity](https://sicss.io/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html)"
+    - name: "19:30 - 20:30 Small group discussion on promise and pitfall in text analysis"
 
 - date: 2021-06-17
   name: Site-specific topics--image analysis
   events:
     - name: "9:00 - 10:00 Talk by Yongren Shi"
     - name: "10:15 - 11:30 Talk by instructor (Han Zhang) "
-    - name: "11:30 - 12:15 Discussions"
-    - name: "20:00 - 21:00 Participant flash talks (encouraged) "
+    - name: "19:30 - 21:00 Participant flash talks (encouraged) "
 
 - date: 2021-06-18
   name: Site-specific topics--polarization or networks
@@ -46,10 +44,10 @@
 - date: 2021-06-21
   name: Site-specific topics--polarization or networks
   events:
-    - name: "10:00 - 11:00 Talk by Liang Hai (live)"
+    - name: "10:00 - 11:00 Talk by Liang Hai"
     - name: "11:15 - 12:30 Talk by instructor"
     - name: "13:30 - 17:30 Research Speed Dating Maximally Dissimilar Groups "
-    - name: "20:00 - 21:00 Group Debrief (join research teams) "
+    - name: "19:30 - 21:00 Group Debrief (join research teams) "
 
 - date: 2021-06-22
   name: Work on group projects (optional) and/or participate in SICSS Festival
