--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -3,6 +3,16 @@
   bio: "Anna is a PhD candidate in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on the dynamics of change in legal pluralism and studies developments in human and environmental rights litigation across jurisdictions. She is also interested in methodology and philosophy of law and economics." 
   website: 
 
+- name: /assets/images/Antonio Davola
+  image: AntonioDavola.jpeg
+  bio: "Dr. Antonio Davola, LLB with honors (University of Pisa, 2015), LLM (Yale Law School, 2018) PhD with honors in “Law and Technology” (Sant’ Anna School of Advanced studies, Pisa, 2019) is Adjunct Professor and Post-Doc Research Fellow at LUISS Guido Carli University in Rome, and Marie Sklodowska Curie Individual Fellow at the University of Amsterdam. His main areas of interest involve financial markets regulation, competition law, consumer protection and the governance of new technologies in the European framework. He devotes significant attention to the application of experimental and empirical analysis to consumer protection, consistently with a research approach strongly focused on Law &Economics. His Marie Curie project “Fair Personalisation” investigates how the use of online personalised and tailored offers affects individual propensity to consume, in order to ultimately redefine the normative thresholds and conditions under which targeted commercial practices may be deemed unfair or manipulative under EU law, laying the foundations for framing a harmonized regulation."
+  website: https://www.antoniodavola.com/
+    
+- name: Delia Lucía Martínez Lorenzo
+  image: /assets/images/LuciaMartinez.jpg
+  bio: "Lucía Martínez Lorenzo holds a Bachelor Degree in Law from Deusto University (Spain), with a minor in Public Law, and an LL.M. in Legal Practice from Universidad de Nebrija (Spain). She successfully passed the national Bar qualification exam in March 2018, and later that year, she became a registered lawyer at the ICALugo. In September 2018, Lucía started as a PhD researcher jointly with the Faculties of Law of Hasselt University and Maastricht Universtity. Her PhD research is entitled “The impact of public procurement law on horizontal and vertical teaming of economic operators in construction projects. Reconciling effective and undistorted competition and the free market”. She has recently written about the consequences of digitalisation for public procurement law developments."
+  website: 
+
 - name: Giovanni De Gregorio
   image: /assets/images/GiovanniDeGregorio.jpg
   bio: "Giovanni De Gregorio is postdoctoral researcher working with the Programme in Comparative Media Law and Policy at the Centre for Socio-Legal Studies. Within the framework of the ERC ConflictNet project, his research focuses on content moderation and artificial intelligence; hate speech and disinformation in conflicts; digital policy in the global south. His research interest deals with constitutional law, human rights, Internet law, privacy and data protection law. He completed his PhD in Constitutional Law at the University of Milano-Bicocca. His doctoral study has investigated the rise of European digital constitutionalism as a reaction and strategy against the predominance of digital private normativities."
