--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -107,6 +107,11 @@
   bio: "Mario Mercado Diaz is a Ph.D. Candidate in the Sociology program at Rutgers University-New Brunswick. His dissertation studies the effects Spanish Caribbean migrants have on the receiving communities of Houston, TX. More broadly, he is interested in land use and housing, aging and health equity, and migrant deportation."
   website: https://twitter.com/mmercadodiaz
   
+- name: Katlyn Milless
+  image: /assets/images/Katlyn_Milless.jpeg
+  bio: "Katlyn is a PhD candidate in Basic and Applied Social Psychology at The Graduate Center, CUNY. Her research lives at the intersection of social justice and psychological theory. She investigates factors to upend group disparities in education and the workplace, as well as ways to promote intergroup safety more broadly."
+  website: https://twitter.com/katlynmilless  
+  
 - name: Zhaomeng Niu
   image: /assets/images/Zhaomeng_Niu.png
   bio: "Zhaomeng Niu is a postdoctoral fellow in Behavioral Sciences at Rutgers Cancer Insititute of New Jersey. She received her PhD from Washington State University. Her research interests include social media interventions, human-computer interaction, and health communication."
