--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -3,8 +3,8 @@
   bio: "Anna is a PhD candidate in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on the dynamics of change in legal pluralism and studies developments in human and environmental rights litigation across jurisdictions. She is also interested in methodology and philosophy of law and economics." 
   website: 
 
-- name: /assets/images/Antonio Davola
-  image: AntonioDavola.jpeg
+- name: Antonio Davola
+  image: /assets/images/AntonioDavola.jpeg
   bio: "Dr. Antonio Davola, LLB with honors (University of Pisa, 2015), LLM (Yale Law School, 2018) PhD with honors in “Law and Technology” (Sant’ Anna School of Advanced studies, Pisa, 2019) is Adjunct Professor and Post-Doc Research Fellow at LUISS Guido Carli University in Rome, and Marie Sklodowska Curie Individual Fellow at the University of Amsterdam. His main areas of interest involve financial markets regulation, competition law, consumer protection and the governance of new technologies in the European framework. He devotes significant attention to the application of experimental and empirical analysis to consumer protection, consistently with a research approach strongly focused on Law &Economics. His Marie Curie project “Fair Personalisation” investigates how the use of online personalised and tailored offers affects individual propensity to consume, in order to ultimately redefine the normative thresholds and conditions under which targeted commercial practices may be deemed unfair or manipulative under EU law, laying the foundations for framing a harmonized regulation."
   website: https://www.antoniodavola.com/
     
