--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -11,8 +11,8 @@
     - name: "10:00am - 5:00pm TBD"
     - name: "5:00 Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
     
-- date: 2021-06-14
-  name: Introduction and Ethics
+- date: 
+  name: Day 1: Introduction and Ethics (Monday, June 14th, 2021)
   events:
     - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)] (link coming soon)) (*Zoom*)"
