--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -14,6 +14,7 @@
 - date: 
   name: Day 1: Introduction and Ethics (Monday, June 14th, 2021)
   events:
+    - name: "[Day 1: Pre-arrival videos and corresponding slides](https://sicss.io/curriculum)"
     - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)] (link coming soon)) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
