--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -63,7 +63,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: "
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier : [Anatoliy Gruzd](https://www.ryerson.ca/information-technology-management/faculty-research/anatoliy-gruzd/)([**Computational Approaches to Studying Anti-Social Behavior in Social Media**](https://drive.google.com/file/d/1ghsTv6rzBlNs60q1K9ps3Yi1LAQh7k5q/view))"
+    - name: "3:30 - 5:00 Conférencier : [Anatoliy Gruzd](https://www.ryerson.ca/information-technology-management/faculty-research/anatoliy-gruzd/) ([**Computational Approaches to Studying Anti-Social Behavior in Social Media**](https://drive.google.com/file/d/1ghsTv6rzBlNs60q1K9ps3Yi1LAQh7k5q/view))"
 - date: 2021-06-16
   name: "Enquêtes à l'ère numérique"
   events:
@@ -81,7 +81,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan) : **Culture, knowledge, and data**"
+    - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan) ([**Culture, knowledge, and data**](https://drive.google.com/file/d/1Q9ZhBhRd2HJl-JZX-6Zi-matdZD1vV3o/view))"
 - date: 2021-06-18
   name: Éthique
   events:
@@ -90,7 +90,7 @@
     - name: "10:30 - 12:30 Labo (Zoom)"
     - name: "12:30 - 1:30 Pause - courte formation: A définir"
     - name: "1:30 - 3:30 Travail en équipe (Zoom)"
-    - name: "3:30 - 5:00 Conférencier : [Golnoosh Farnadi](https://gfarnadi.github.io/)([**Fairness in Machine Learning**](https://drive.google.com/file/d/1Z4umijhs8RqGiGUBnHB_HQTI6yOUVf7d/view))"
+    - name: "3:30 - 5:00 Conférencier : [Golnoosh Farnadi](https://gfarnadi.github.io/) ([**Fairness in Machine Learning**](https://drive.google.com/file/d/1Z4umijhs8RqGiGUBnHB_HQTI6yOUVf7d/view))"
 - date: 2021-06-19
   name: Congé
 - date: 2021-06-20
