--- a/_data/2021/montreal/speakers.yml
+++ b/_data/2021/montreal/speakers.yml
@@ -20,7 +20,7 @@
   
 - name:  Peter McMahan
   image: /assets/images/mcmahan.jpg
-  bio: Peter McMahan is an Assistant Professor of Sociology at McGill University. He completed his PhD at the University of Chicago. His work centers on the ways that communication and other interaction informs and reinforces knowledge and cultural domains. He specializes in statistical modeling and computational methodologies, with particular focus on network analysis and methods for social inference on large, unstructured datasets. For this Summer School, He will present on <a href="https://drive.google.com/file/d/1Q9ZhBhRd2HJl-JZX-6Zi-matdZD1vV3o/view">**Culture, knowledge, and data**</a>.
+  bio: Peter McMahan is an Assistant Professor of Sociology at McGill University. He completed his PhD at the University of Chicago. His work centers on the ways that communication and other interaction informs and reinforces knowledge and cultural domains. He specializes in statistical modeling and computational methodologies, with particular focus on network analysis and methods for social inference on large, unstructured datasets. For this Summer School, He will present on <a href="https://drive.google.com/file/d/1Q9ZhBhRd2HJl-JZX-6Zi-matdZD1vV3o/view">Culture, knowledge, and data</a>.
   website: https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan
   
   
