--- a/_data/2021/montreal/teaching_assistants.yml
+++ b/_data/2021/montreal/teaching_assistants.yml
@@ -1,6 +1,6 @@
 - name: Robert Djogbenou
   image: /2020/montreal/images/Robert_Djogbenou.JPG  
-  bio: "Robert Djogbenou is a PhD candidate in the department of Demography at the Université de Montréal. He is also student in Post Graduate Program in Artificial Intelligence and Machine Learning at the McGill University and The University of Texas at Austin. His research uses computational approaches to study immigrants’ socio-cultural integration in Canada. His other interests include reproductive health and family dynamics in sub-Saharan Africa. He is affiliated with the Lab on quantitative and computational social science at the Université du Québec à Montréal."
+  bio: "Robert Djogbenou is a PhD candidate in Demography at the Université de Montréal. He is also student in Data Science and Machine Learning at the McGill University and in Artificial Intelligence/Machine Learning at the University of Texas at Austin. His research uses computational approaches to study immigrants’ socio-cultural integration in Canada. His other interests include reproductive health and family dynamics in sub-Saharan Africa. He is affiliated with the Lab on quantitative and computational social science at the Université du Québec à Montréal."
   website: https://twitter.com/RobertDjogbenou
   
 - name: Nima Zahedinameghi
